force-app/main/default/objects/Resource__c/fields/Available_From__c.field-meta.xml
<CustomField>
    <fullName>Available_From__c</fullName>
    <label>Available From</label>
    <type>Date</type>
</CustomField>