force-app/main/default/objects/Resource__c/fields/Available_To__c.field-meta.xml
<CustomField>
    <fullName>Available_To__c</fullName>
    <label>Available To</label>
    <type>Date</type>
</CustomField>