force-app/main/default/objects/Resource__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <defaultValue>8.0</defaultValue>
    <label>Capacity</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>